1999-06-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: more changes to internal data structure to make
	them language independant, especially hiding all occurances
	of the SMIng namespace operator `::'.

	* data.c: cleaned up libsmi base types to be less language
	dependant.

	* lib/smi.h: add API function smiGetNodeByOID() to retrieve
	an SmiNode based on an OID given by an integer array.

	* lib/smi.c: smiGetNode() now returns the node with the longest
	common OID prefix, if its argument is given by OID.
	
1999-06-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.h: added SmiLanguage and an appropriate element to the
	SmiModule struct to represent the language that has been used to
	read a MIB module.

1999-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.h: Hiding knowledge on the underlying language from
	the API: SmiNode contains a new element `nodekind' that represents
	the kind of any node in the tree independant from the actual
	language statement. Hence, most application no longer need to
	use SmiDecl. smiquery and smidump are adapted accordingly.

1999-06-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c: implemented smiGetFirstChild() and smiGetNextChild().

	* lib/smi.h: OIDs are now represented by a more efficient array
	of integers instead of a string.

1999-06-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* test/parser.test.in: started to write a set of MIB modules
	to test the capabilities of MIB parsers to detect syntax and
	semantic errors.

	* tools/dump-smi.c: fixed bug when dumping modules without
	any compliance statement.

	* libsmi-0.1.4.tar.gz: released version 0.1.4.

	* lib/error.h: undef'ed yyerror to suppress compile warning.

	* tools/dump-sming.c (printObjects): fixed bug with missing
	nodes read from OBJECT-IDENTITY constructs.

	* lib/parser-sming.y: fixed bug in name creation of pseudo types
	in compliance statements.

1999-06-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
